raw/piston-image-0.10.3--2016-11-11-04-24-18--0.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./piston-image-0.10.3
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling gcc v0.3.35
   Compiling lzw v0.10.0
   Compiling num-traits v0.1.35
   Compiling rustc-serialize v0.3.19
   Compiling inflate v0.1.1
   Compiling color_quant v1.0.0
   Compiling libc v0.2.16
   Compiling scoped_threadpool v0.1.7
   Compiling byteorder v0.5.3
   Compiling gif v0.9.0
   Compiling num_cpus v0.2.13
   Compiling rand v0.3.14
   Compiling glob v0.2.11
   Compiling num-integer v0.1.32
   Compiling bitflags v0.7.0
   Compiling num-iter v0.1.32
   Compiling miniz-sys v0.1.7
   Compiling num v0.1.35
   Compiling enum_primitive v0.1.0
   Compiling flate2 v0.2.14
   Compiling deque v0.3.1
   Compiling rayon v0.4.2
   Compiling num-bigint v0.1.35
   Compiling jpeg-decoder v0.1.6
   Compiling png v0.5.2
   Compiling num-rational v0.1.35
   Compiling image v0.10.3 (file:///root/benchmarks/piston-image-0.10.3)
time: 0.038; rss: 54MB	parsing
Lines of code:             12000
Pre-expansion node count:  90152
time: 0.000; rss: 54MB	recursion limit
time: 0.000; rss: 54MB	crate injection
time: 0.000; rss: 54MB	plugin loading
time: 0.000; rss: 54MB	plugin registration
time: 0.064; rss: 93MB	expansion
time: 0.000; rss: 93MB	maybe building test harness
time: 0.001; rss: 93MB	maybe creating a macro crate
Post-expansion node count: 148881
time: 0.000; rss: 93MB	checking for inline asm in case the target doesn't support it
time: 0.003; rss: 93MB	complete gated feature checking
time: 0.005; rss: 93MB	early lint checks
time: 0.001; rss: 93MB	AST validation
time: 0.019; rss: 98MB	name resolution
time: 0.012; rss: 106MB	lowering ast -> hir
time: 0.002; rss: 110MB	indexing hir
time: 0.001; rss: 110MB	attribute checking
time: 0.001; rss: 100MB	language item collection
time: 0.003; rss: 100MB	lifetime resolution
time: 0.000; rss: 100MB	looking for entry point
time: 0.000; rss: 100MB	looking for plugin registrar
time: 0.009; rss: 106MB	region resolution
time: 0.001; rss: 106MB	loop checking
time: 0.001; rss: 106MB	static item recursion checking
time: 0.050; rss: 105MB	compute_incremental_hashes_map
time: 0.000; rss: 105MB	load_dep_graph
time: 0.015; rss: 108MB	type collecting
time: 0.000; rss: 108MB	variance inference
time: 0.014; rss: 110MB	coherence checking
time: 0.065; rss: 111MB	wf checking
time: 0.137; rss: 113MB	item-types checking
time: 0.699; rss: 124MB	item-bodies checking
time: 0.000; rss: 124MB	drop-impl checking
time: 0.049; rss: 128MB	const checking
time: 0.008; rss: 128MB	privacy checking
time: 0.001; rss: 128MB	stability index
time: 0.006; rss: 128MB	intrinsic checking
time: 0.003; rss: 128MB	effect checking
time: 0.014; rss: 128MB	match checking
time: 0.009; rss: 128MB	liveness checking
time: 0.039; rss: 128MB	rvalue checking
time: 0.091; rss: 171MB	MIR dump
  time: 0.011; rss: 171MB	SimplifyCfg
  time: 0.019; rss: 171MB	QualifyAndPromoteConstants
  time: 0.021; rss: 171MB	TypeckMir
  time: 0.001; rss: 171MB	SimplifyBranches
  time: 0.004; rss: 171MB	SimplifyCfg
time: 0.056; rss: 171MB	MIR cleanup and validation
time: 0.106; rss: 171MB	borrow checking
time: 0.003; rss: 171MB	reachability checking
time: 0.007; rss: 171MB	death checking
time: 0.007; rss: 173MB	stability checking
time: 0.000; rss: 173MB	unused lib feature checking
time: 0.062; rss: 173MB	lint checking
time: 0.000; rss: 173MB	resolving dependency formats
  time: 0.001; rss: 173MB	NoLandingPads
  time: 0.005; rss: 173MB	SimplifyCfg
  time: 0.010; rss: 173MB	EraseRegions
  time: 0.002; rss: 173MB	AddCallGuards
  time: 0.041; rss: 178MB	ElaborateDrops
  time: 0.001; rss: 178MB	NoLandingPads
  time: 0.009; rss: 178MB	SimplifyCfg
  time: 0.006; rss: 178MB	InstCombine
  time: 0.002; rss: 178MB	Deaggregator
  time: 0.000; rss: 178MB	CopyPropagation
  time: 0.007; rss: 178MB	SimplifyLocals
  time: 0.002; rss: 178MB	AddCallGuards
  time: 0.000; rss: 178MB	PreTrans
time: 0.086; rss: 178MB	MIR optimisations
  time: 0.016; rss: 180MB	write metadata
  time: 0.393; rss: 193MB	translation item collection
  time: 0.024; rss: 195MB	codegen unit partitioning
  time: 0.022; rss: 318MB	internalize symbols
time: 2.428; rss: 318MB	translation
time: 0.000; rss: 318MB	assert dep graph
time: 0.000; rss: 318MB	serialize dep graph
  time: 0.209; rss: 230MB	llvm function passes [0]
  time: 0.081; rss: 233MB	llvm module passes [0]
  time: 4.199; rss: 231MB	codegen passes [0]
  time: 0.000; rss: 231MB	codegen passes [0]
time: 4.795; rss: 231MB	LLVM passes
time: 0.000; rss: 231MB	serialize work products
time: 0.127; rss: 100MB	linking
done
